# project-tree

./: .gitignore  .projtreeignore  LICENSE  README.md  architecture.md  pyproject.toml
projtree/: cli.py  ignore.py  watcher.py
projtree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_basic_tree.py  test_watcher_basic.py  utils.py
